Fix trigger settings panel styles couldn't handle content overflow

--- a/src/client/assets/uxpl/form.less
+++ b/src/client/assets/uxpl/form.less
@@ -31,7 +31,6 @@
     font-style: normal;
     font-stretch: normal;
     line-height: 1.31;
-    letter-spacing: 0.3px;
     /*text-align: left;*/
     color: @warm-grey;
     max-width: 100%;
