--- a/src/client/flogo/flow/triggers/configurator/trigger-detail/settings/settings.component.less
+++ b/src/client/flogo/flow/triggers/configurator/trigger-detail/settings/settings.component.less
@@ -2,7 +2,8 @@
 @import '../../../../../../assets/uxpl/form';
 
 :host {
-  height: 100%;
+  flex: 1;
+  overflow: auto;
   background-color: @lighter-gray;
 }
 
