--- a/src/client/flogo/flow/triggers/configurator/trigger-detail/tabs/tabs.component.less
+++ b/src/client/flogo/flow/triggers/configurator/trigger-detail/tabs/tabs.component.less
@@ -3,7 +3,6 @@
   background-color: white;
   margin: 0;
   padding: 0;
-  height: 100%;
 }
 
 .tab {
@@ -11,7 +10,6 @@
   font-size: 1rem;
   line-height: 1;
   margin: 0;
-  margin-bottom: 7px;
   padding: 1.25em 1.75em;
   color: #0081cb;
   border-bottom: 7px solid transparent;
